# MultiphaseGalacticHaloModel

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
3Phase/: 3PhasePdf-LogTu=6.3K.npy  3PhasePdf-LogTu=6.4K.npy  3PhasePdf-LogTu=6.5K.npy  3PhasePdf-LogTu=8.1K.npy  corner_data.npy  make-corner.py  manySights.py  parameters.npy  params_sol.npy  plot-randomSights.py  syntheticHalo.py  threePhaseObservables.py  threePhases-plot.py  threePhases.py  threePhasesBetaFind.py  threePhasesParamFind.py
3Phases/: 1d-pdf.py  2d_pdf_analytic_all.py  2d_pdf_analytic_opt.py  2dplot.py  3p-ndens.txt  3p-ndens_CIE.txt  3p-ndens_PIE.txt  3p-temp.txt  3p-temp_PIE.txt  cloudy-cool-query.txt  hot-branch.txt  manySights-plot.py  manySights.py  marginal_pdf-all.py  mcmc-plot-corner-MassLum.py  mcmc-plot-corner.py  nIon0-Mg II.txt  nIon0-Mg II_CIE.txt  nIon0-Mg II_PIE.txt  nIon0-O VI.txt  nIon0-O VI_CIE.txt  nIon0-O VI_PIE.txt  threePhase_Mass_Vol_mcmc.py  threePhases-MassLum_mcmc.py  threePhases-SB.py  threePhases-observables.py  threePhases-param_find.py  threePhases-plot.py  threePhases.py  tmp-test.txt  warm-branch.txt
figures/: DiskTemperature.py  column-density-plot.py  column-density.py  density_profiles.py  diskDM.py  diskEM.py  dispersion-measure-plot.py  dispersion-measure.py  dispersionDisk.npy  emission-measure-plot.py  emission-measure.py  emission-spectrum-plot.py  emission-spectrum.py  emissionDisk.npy  mod-debug.npy  profiles.py  test-debug-ne.npy  test-debug-ni.npy
misc/: ColDensCOSData.py  HaloModel.py  ProgressBar.py  constants.py  (+6 more)
(+245 files in other folders)
